--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cloud_firestore: ^0.13.7
   firebase_auth: ^0.16.1
   carousel_pro: ^1.0.0
+  provider: ^4.3.2
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,6 +61,11 @@ flutter:
      - images/shopping.png
      - images/userImage.png
      - images/women.jpg
+     - images/dress.png
+     - images/shirt.png
+     - images/shoes.png
+     - images/pant.png
+     - images/tie.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
