--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,16 @@ dependencies:
 #  cloud_firestore: ^2.2.2
 #  firebase_core: ^1.3.0
 
-  cloud_firestore: ^0.13.7
-  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.0+1
   carousel_pro: ^1.0.0
-  provider: ^4.3.2
-  
+  provider: ^4.3.2+1
+  flutter_material_pickers: ^1.7.2
+  firebase_core: ^0.5.0
+  bottom_navy_bar: ^5.5.0
+  image_picker: ^0.6.7+7
+  firebase_storage: ^4.0.0
+  badges: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
